--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/general.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Roboto&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
 	<header>
@@ -42,30 +43,60 @@
 		</div>
 	</header>
 	<main>
-		<aside class="sidebar">
-			<h2>Book Your Stay</h2>
-			<form action="#">
-				CHECK-IN<br>
-				<input type="date" name="chek-in"><br>
-				CHECK-OUT<br>
-				<input type="date" name="chek-out"><br>
-				ADULTS<br>
-				<input type="number" name="adults"><br>
-				CHILDREN<br>
-				<input type="number" name="children"><br>
-				<input type="select" class="button" value="Search">
-			</form>
-		</aside>
 		<section class="about-us">
-			<!-- <img src="img/1.png"> -->
+			<div>
+				<img src="img/1.png">
+			</div>
 			<article>
 				<h3 class="section-heading">About Us</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula. Cras convallis hendrerit neque, et aliquet nisl malesuada non. Curabitur elementum posuere ex, quis faucibus nibh eleifend a. Duis arcu dui, tempus in magna blandit, maximus pretium diam. Nulla iaculis dolor ut hendrerit bibendum. Nam id est a ligula vehicula eleifend ac vitae lacus. Etiam sed tortor at diam viverra ultricies et id dolor. Morbi a sagittis massa, vitae pretium erat.</p>
-				<p></p>
-				<p></p>
-				<p></p>
-				<p></p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula. Cras convallis hendrerit neque, et aliquet nisl malesuada non. Curabitur elementum posuere ex, quis faucibus nibh eleifend a. Duis arcu dui, tempus in magna blandit, maximus pretium diam. Nulla iaculis dolor ut hendrerit bibendum.</p>
+				<div class="facilities">
+					<p class="facilities-icon"><i class="fas fa-bed"></i></p>
+					<p>bedrooms: 16</p>
+				</div>
+				<div class="facilities">
+					<p class="facilities-icon"><i class="fas fa-bath"></i></p>
+					<p>bathrooms: 8</p>
+				</div>
+				<div class="facilities">
+					<p class="facilities-icon"><i class="fas fa-car"></i></p>
+					<p>parkings: 10</p>
+				</div>
+				<div class="facilities">
+					<p class="facilities-icon"><i class="fas fa-expand-arrows-alt"></i></p>
+					<p>area: 320m<sup>2</sup></p>
+				</div>
+				<a class="button" href="#">View Details</a>
 			</article>
+		</section>
+		<section class="activities even">
+			<h3 class="section-heading">Activities</h3>
+			<div class="activities-content">
+				<div class="activities-item">
+					<div class="activities-img">
+						<img src="img/3.jpg">
+					</div>
+					<h2>Mountain Snowmobile Tour</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
+					<a href="#" class="button">Continue reading</a>
+				</div>	
+				<div class="activities-item">
+					<div class="activities-img">
+						<img src="img/4.jpg">
+					</div>
+					<h2>Snowboard & Ski Lessons</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
+					<a href="#" class="button">Continue reading</a>
+				</div>
+				<div class="activities-item">
+					<div class="activities-img">
+						<img src="img/2.jpg">
+					</div>
+					<h2>Wine Tasting</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
+					<a href="#" class="button">Continue reading</a>
+				</div>
+			</div>
 		</section>
 	</main>
 </body>
