--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<header>
 		<div class="header-nav">
-			<h1 class="site-name">MountainHouse</h1>
+			<h1><a href="index.html" class="site-name">MountainHouse</a></h1>
 			<nav class="nav-panel">
 				<ul class="nav-menu">
 					<li class="nav-menu-item"><a href="#">About Us</a></li>
@@ -44,27 +44,29 @@
 	</header>
 	<main>
 		<section class="about-us">
-			<div>
+			<div class="img">
 				<img src="img/1.png">
 			</div>
 			<article>
 				<h3 class="section-heading">About Us</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula. Cras convallis hendrerit neque, et aliquet nisl malesuada non. Curabitur elementum posuere ex, quis faucibus nibh eleifend a. Duis arcu dui, tempus in magna blandit, maximus pretium diam. Nulla iaculis dolor ut hendrerit bibendum.</p>
-				<div class="facilities">
-					<p class="facilities-icon"><i class="fas fa-bed"></i></p>
-					<p>bedrooms: 16</p>
-				</div>
-				<div class="facilities">
-					<p class="facilities-icon"><i class="fas fa-bath"></i></p>
-					<p>bathrooms: 8</p>
-				</div>
-				<div class="facilities">
-					<p class="facilities-icon"><i class="fas fa-car"></i></p>
-					<p>parkings: 10</p>
-				</div>
-				<div class="facilities">
-					<p class="facilities-icon"><i class="fas fa-expand-arrows-alt"></i></p>
-					<p>area: 320m<sup>2</sup></p>
+				<div class="container">
+					<div class="facilities">
+						<p class="facilities-icon"><i class="fas fa-bed"></i></p>
+						<p>bedrooms: 16</p>
+					</div>
+					<div class="facilities">
+						<p class="facilities-icon"><i class="fas fa-bath"></i></p>
+						<p>bathrooms: 8</p>
+					</div>
+					<div class="facilities">
+						<p class="facilities-icon"><i class="fas fa-car"></i></p>
+						<p>parkings: 10</p>
+					</div>
+					<div class="facilities">
+						<p class="facilities-icon"><i class="fas fa-expand-arrows-alt"></i></p>
+						<p>area: 320m<sup>2</sup></p>
+					</div>
 				</div>
 				<a class="button" href="#">View Details</a>
 			</article>
@@ -96,6 +98,86 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
 					<a href="#" class="button">Continue reading</a>
 				</div>
+			</div>
+		</section>
+		<section class="odd-info container">
+			<div>
+				<p class="number">5</p>
+				<p>Years of Service</p>
+			</div>
+			<div>
+				<p class="number">2736</p>
+				<p>Happy Visitors</p>
+			</div>
+			<div>
+				<p class="number">18</p>
+				<p>Rewards</p>
+			</div>
+			<div>
+				<p class="number">111</p>
+				<p>Staff</p>
+			</div>
+		</section>
+		<section class="rooms container">
+			<div class="room">
+				<div class="rooms-img">
+					<img src="img/room1.jpg">
+				</div>
+				<h2>
+					Room 1
+				</h2>
+				<h3>Standard double room</h3>
+				<p>The one-bedroom apartment with a private bathroom and terrace.</p>
+				<ul class="rooms-info">
+					<li><i class="fas fa-male"></i>&nbsp;&nbsp;2</li>
+					<li><i class="fas fa-coffee"></i>&nbsp;&nbsp;carpeted, heating, wi-fi</li>
+					<li><i class="far fa-eye"></i>&nbsp;&nbsp;mountain view</li>
+					<li><i class="fas fa-expand-arrows-alt"></i>&nbsp;&nbsp;18 m<sup>2</sup></li>
+					<li><i class="fas fa-bed"></i>&nbsp;&nbsp;1 queen size bed</li>
+					<li><i class="fas fa-tag"></i>&nbsp;&nbsp;double</li>
+				</ul>
+				<p class="rooms-prices"><b>Prices start at:</b> $220 per night</p>
+			</div>
+			<div class="room">
+				<div class="rooms-img">
+					<img src="img/room2.jpg">
+				</div>
+				<h2>
+					Room 2
+				</h2>
+				<h3>Econom single room</h3>
+				<p>The one-bedroom apartment.</p>
+				<ul class="rooms-info">
+					<li><i class="fas fa-male"></i>&nbsp;&nbsp;1</li>
+					<li><i class="fas fa-coffee"></i>&nbsp;&nbsp;breakfast, heating, wi-fi</li>
+					<li><i class="far fa-eye"></i>&nbsp;&nbsp;mountain view</li>
+					<li><i class="fas fa-expand-arrows-alt"></i>&nbsp;&nbsp;14 m<sup>2</sup></li>
+					<li><i class="fas fa-bed"></i>&nbsp;&nbsp;1 single bed</li>
+					<li><i class="fas fa-tag"></i>&nbsp;&nbsp;single</li>
+				</ul>
+				<p class="rooms-prices"><b>Prices start at:</b> $110 per night</p>
+				<div class="rooms-button">
+					<a href="#" class="button">More</a>
+				</div>
+			</div>
+			<div class="room">
+				<div class="rooms-img">
+					<img src="img/room3.jpg">
+				</div>
+				<h2>
+					Room 3
+				</h2>
+				<h3>Two-Bedroom Apartment</h3>
+				<p>This newly renovated studio apartment with a breathtaking mountain view.</p>
+				<ul class="rooms-info">
+					<li><i class="fas fa-male"></i>&nbsp;&nbsp;2&nbsp;&nbsp;<i class="fas fa-baby"></i>&nbsp;&nbsp;2</li>
+					<li><i class="fas fa-coffee"></i>&nbsp;&nbsp;air-conditioning, breakfast, wi-fi</li>
+					<li><i class="far fa-eye"></i>&nbsp;&nbsp;mountain view</li>
+					<li><i class="fas fa-expand-arrows-alt"></i>&nbsp;&nbsp;36 m<sup>2</sup></li>
+					<li><i class="fas fa-bed"></i>&nbsp;&nbsp;2 queen size beds</li>
+					<li><i class="fas fa-tag"></i>&nbsp;&nbsp;studio</li>
+				</ul>
+				<p class="rooms-prices"><b>Prices start at:</b> $440 per night</p>
 			</div>
 		</section>
 	</main>
