--- a/index.html
+++ b/index.html
@@ -180,6 +180,53 @@
 				<p class="rooms-prices"><b>Prices start at:</b> $440 per night</p>
 			</div>
 		</section>
+		<section class="booking odd-info">
+			<h2>Book Your Stay</h2>
+		<form action="#" class="booking-form" onsubmit="return false">
+		<div class="booking-input">
+			<p>CHECK-IN</p>
+			<input type="date" name="chek-in">
+		</div>
+		<div class="booking-input">
+			<p>CHECK-OUT</p>
+			<input type="date" name="chek-out">
+		</div>
+		<div class="booking-input">
+			<p>ADULTS</p>
+			<input type="number" name="adults">
+		</div>
+		<div class="booking-input">
+			<p>CHILDREN</p>
+			<input type="number" name="children">
+		</div>
+		<div class="booking-input">
+			<button type="select" class="button form-btn">Search</button>
+		</div>
+	</form>
+		</section>
+		<section class="contacts even container">
+			<div class="contacts-info">
+				<h2>Contacts</h2>
+				<p><i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;Peist, Switzerland</p>
+				<p><i class="fas fa-phone"></i>&nbsp;&nbsp;<a href="tel: +3 (123) 456 5783">+3 (123) 456 5783</p>
+				<p><i class="fas fa-envelope"></i>&nbsp;&nbsp;<a href="mailto: reception@moutainhouse.com">reception@moutainhouse.com</a></p>
+				<form action="#" onsubmit="return false">
+					<p>
+						<input type="text" name="full_name" placeholder="Full Name">
+					</p>
+					<p>
+						<input type="email" name="email" placeholder="E-mail">
+					</p>
+					<p>
+						<input type="text" name="message" placeholder="Message" height="20">
+					</p>
+					<p>
+						<button type="select" class="button form-btn">Send</button>
+					</p>
+				</form>
+			</div>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43673.65909257699!2d9.65653557747484!3d46.831804659930256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4784bbbc9f94ecb3%3A0x108410add3aee599!2sPeist!5e0!3m2!1sru!2sua!4v1558438515458!5m2!1sru!2sua" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</section>
 	</main>
 </body>
 </html>
