--- a/index.html
+++ b/index.html
@@ -37,12 +37,17 @@
 				</ul>
 			</nav>
 		</div>
+	</header>
+	<main>
 		<div id="slider">
 			<p>Lorem ipsum dolor sit amet</p>
 			<a class="button">Learn more</a>
+			<div class="slider">
+				<img src="img/castelmezzano-1979546_1920.jpg">
+				<img src="img/mountains-1645078_1920.jpg">
+				<img src="img/norway-772991_1920.jpg">
+			</div>
 		</div>
-	</header>
-	<main>
 		<section class="about-us">
 			<div class="img">
 				<img src="img/1.png">
@@ -228,5 +233,16 @@
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43673.65909257699!2d9.65653557747484!3d46.831804659930256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4784bbbc9f94ecb3%3A0x108410add3aee599!2sPeist!5e0!3m2!1sru!2sua!4v1558438515458!5m2!1sru!2sua" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</section>
 	</main>
+	<footer>
+		<form action="#" onsubmit="return false">
+			<input type="text" name="search">
+			<button type="select" class="button form-btn">Search</button>
+		</form>
+		<div class="footer">
+			<h1><a href="index.html" class="site-name">MountainHouse&nbsp;&nbsp;&nbsp;&nbsp;</a></h1>
+			<p><a href="#" class="i"><i class="fab fa-facebook-square"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="i"><i class="fab fa-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="i"><i class="fab fa-twitter"></i></a></p>
+		</div>
+	</footer>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
