--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<h1><a href="index.html" class="site-name">MountainHouse</a></h1>
 			<nav class="nav-panel">
 				<ul class="nav-menu">
-					<li class="nav-menu-item"><a href="#">About Us</a></li>
-					<li class="nav-menu-item"><a href="#">Activities</a>
+					<li class="nav-menu-item"><a href="about_us.html">About Us</a></li>
+					<li class="nav-menu-item"><a href="activities.html">Activities</a>
 						<ul class="submenu">
 							<li><a href="#">Mountain Snowmobile Tour</a></li>
 							<li><a href="#">Snowboard & Ski Lessons</a></li>
@@ -85,7 +85,7 @@
 					</div>
 					<h2>Mountain Snowmobile Tour</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
-					<a href="#" class="button">Continue reading</a>
+					<a href="#" class="button">More</a>
 				</div>	
 				<div class="activities-item">
 					<div class="activities-img">
@@ -93,7 +93,7 @@
 					</div>
 					<h2>Snowboard & Ski Lessons</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
-					<a href="#" class="button">Continue reading</a>
+					<a href="#" class="button">More</a>
 				</div>
 				<div class="activities-item">
 					<div class="activities-img">
@@ -101,7 +101,7 @@
 					</div>
 					<h2>Wine Tasting</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
-					<a href="#" class="button">Continue reading</a>
+					<a href="#" class="button">More</a>
 				</div>
 			</div>
 		</section>
@@ -235,7 +235,7 @@
 	</main>
 	<footer>
 		<form action="#" onsubmit="return false">
-			<input type="text" name="search">
+			<input type="text" name="search" id="search">
 			<button type="select" class="button form-btn">Search</button>
 		</form>
 		<div class="footer">
