--- a/activities.html
+++ b/activities.html
@@ -1,87 +1,34 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MountainHouse</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/general.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Roboto&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-</head>
-<body>
-	<header>
-		<div class="header-nav">
-			<h1><a href="index.html" class="site-name">MountainHouse</a></h1>
-			<nav class="nav-panel">
-				<ul class="nav-menu">
-					<li class="nav-menu-item"><a href="about_us.html">About Us</a></li>
-					<li class="nav-menu-item"><a href="activities.html">Activities</a>
-						<ul class="submenu">
-							<li><a href="#">Mountain Snowmobile Tour</a></li>
-							<li><a href="#">Snowboard & Ski Lessons</a></li>
-							<li><a href="#">Wine Tasting</a></li>
-						</ul>
-					</li>
-					<li class="nav-menu-item"><a href="#">Rooms</a>
-						<ul class="submenu">
-							<li><a href="#">Room 1</a></li>
-							<li><a href="#">Room 2</a></li>
-							<li><a href="#">Room 3</a></li>
-						</ul>
-					</li>
-					<li class="nav-menu-item"><a href="#">Booking</a></li>
-					<li class="nav-menu-item"><a href="#">Gallery</a></li>
-					<li class="nav-menu-item"><a href="#">Contacts</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-	<main class="main">
-		<section>
-			<h3 class="section-heading">Activities</h3>
-				<div class="activities-page-item activities-page-item-1">
-					<h2>Mountain Snowmobile Tour</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
-					<a href="#" class="button">More</a>
-				</div>	
-				<div class="activities-page-item">
-					<h2>Snowboard & Ski Lessons</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
-					<a href="#" class="button">More</a>
-				</div>
-				<div class="activities-page-item">
-					<h2>Wine Tasting</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
-					<a href="#" class="button">More</a>
-				</div>	
-			</section>
-			<aside class="sidebar">
-		<h2>Book Your Stay</h2>
-		<form action="#">
-			CHECK-IN<br>
-			<input type="date" name="chek-in"><br>
-			CHECK-OUT<br>
-			<input type="date" name="chek-out"><br>
-			ADULTS<br>
-			<input type="number" name="adults"><br>
-			CHILDREN<br>
-			<input type="number" name="children"><br>
-			<input type="select" class="button" value="Search">
-		</form>
-	</aside>
-	</main>
-	
-	<footer>
-		<form action="#" onsubmit="return false">
-			<input type="text" name="search" id="search">
-			<button type="select" class="button form-btn">Search</button>
-		</form>
-		<div class="footer">
-			<h1><a href="index.html" class="site-name">MountainHouse&nbsp;&nbsp;&nbsp;&nbsp;</a></h1>
-			<p><a href="#" class="i"><i class="fab fa-facebook-square"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="i"><i class="fab fa-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="i"><i class="fab fa-twitter"></i></a></p>
-		</div>
-	</footer>
-</body>
-</html>
+<div class="main">
+	<section>
+		<h3 class="section-heading">Activities</h3>
+			<div class="activities-page-item activities-page-item-1">
+				<h2>Mountain Snowmobile Tour</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
+				<a href="?page=mountain_snowmobile_tour" class="button">More</a>
+			</div>	
+			<div class="activities-page-item">
+				<h2>Snowboard & Ski Lessons</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
+				<a href="?page=snowboard_ski_lessons" class="button">More</a>
+			</div>
+			<div class="activities-page-item">
+				<h2>Wine Tasting</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula.</p>
+				<a href="?page=wine_tasting" class="button">More</a>
+			</div>	
+		</section>
+		<aside class="sidebar">
+	<h2>Book Your Stay</h2>
+	<form action="#">
+		CHECK-IN<br>
+		<input type="date" name="chek-in"><br>
+		CHECK-OUT<br>
+		<input type="date" name="chek-out"><br>
+		ADULTS<br>
+		<input type="number" name="adults"><br>
+		CHILDREN<br>
+		<input type="number" name="children"><br>
+		<input type="select" class="button" value="Search">
+	</form>
+		</aside>
+</div>
