--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					</ul>
 				</li>
 				<li class="nav-menu-item"><a href="#">Booking</a></li>
-				<li class="nav-menu-item"><a href="#">Gallery</a></li>
+				<li class="nav-menu-item"><a href="?page=gallery">Gallery</a></li>
 				<li class="nav-menu-item"><a href="#">Contacts</a></li>
 			</ul>
 		</nav>
