--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,54 @@
-<section class="gallery-section">
+<section class="gallery-section" id="gallery-section">
 	<h3>Gallery</h3>
 	<div class="gallery">
+		<div class="gallery-img">
+			<!-- <img src="img/2.jpg"> -->
+		</div>
+		<div class="gallery-img">
+			<!-- <img src="img/3.jpg"> -->
+		</div>
+		<div class="gallery-img">
+			<!-- <img src="img/4.jpg"> -->
+		</div>
+		<div class="gallery-img">
+			<!-- <img src="img/castelmezzano-1979546_1920.jpg"> -->
+		</div>
+		<div class="gallery-img">
+<!-- 			<img src="img/mountains-1645078_1920.jpg">
+ -->		</div>
+		<div class="gallery-img">
+<!-- 			<img src="img/norway-772991_1920.jpg">
+ -->		</div>
+		<div class="gallery-img">
+<!-- 			<img src="img/room1.jpg">
+ -->		</div>
+		<div class="gallery-img">
+<!-- 			<img src="img/room2.jpg">
+ -->		</div>
+		<div class="gallery-img">
+<!-- 			<img src="img/room3.jpg">
+ -->		</div>
+		<div class="gallery-img">
+<!-- 			<img src="img/rough-horn-2146181_1920.jpg">
+ -->		</div>
+		<div class="gallery-img">
+<!-- 			<img src="img/mountains-1645078_1920.jpg">
+ -->		</div>
+		<div class="gallery-img">
+<!-- 			<img src="img/norway-772991_1920.jpg">
+ -->		</div>
+	</div>
+		<div id="pagination">
+			<span id="previous" onclick="prev()"><</span><span id="current-number">1</span><span id="next" onclick="next()">></span>
+		</div>
+		<!-- <img src="img/room1.jpg">
+		<img src="img/room2.jpg">
+		<img src="img/room3.jpg">
+		<img src="img/rough-horn-2146181_1920.jpg">
+		<img src="img/2.jpg">
+		<img src="img/3.jpg">
+		<img src="img/4.jpg">
+		<img src="img/castelmezzano-1979546_1920.jpg">
 		<img src="img/2.jpg">
 		<img src="img/3.jpg">
 		<img src="img/4.jpg">
@@ -20,26 +68,6 @@
 		<img src="img/2.jpg">
 		<img src="img/3.jpg">
 		<img src="img/4.jpg">
-		<img src="img/castelmezzano-1979546_1920.jpg">
-		<img src="img/2.jpg">
-		<img src="img/3.jpg">
-		<img src="img/4.jpg">
-		<img src="img/castelmezzano-1979546_1920.jpg">
-		<img src="img/mountains-1645078_1920.jpg">
-		<img src="img/norway-772991_1920.jpg">
-		<img src="img/room1.jpg">
-		<img src="img/room2.jpg">
-		<img src="img/room3.jpg">
-		<img src="img/rough-horn-2146181_1920.jpg">
-		<img src="img/mountains-1645078_1920.jpg">
-		<img src="img/norway-772991_1920.jpg">
-		<img src="img/room1.jpg">
-		<img src="img/room2.jpg">
-		<img src="img/room3.jpg">
-		<img src="img/rough-horn-2146181_1920.jpg">
-		<img src="img/2.jpg">
-		<img src="img/3.jpg">
-		<img src="img/4.jpg">
-		<img src="img/castelmezzano-1979546_1920.jpg">
+		<img src="img/castelmezzano-1979546_1920.jpg"> -->
 	</div>
 </section>
