--- a/main.html
+++ b/main.html
@@ -170,11 +170,11 @@
 </section>
 <section class="contacts even container">
     <div class="contacts-info">
-        <h2>Contacts</h2>
+        <h2>Contact Us</h2>
         <p><i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;Peist, Switzerland</p>
         <p><i class="fas fa-phone"></i>&nbsp;&nbsp;<a href="tel: +3 (123) 456 5783">+3 (123) 456 5783</p>
         <p><i class="fas fa-envelope"></i>&nbsp;&nbsp;<a href="mailto: reception@moutainhouse.com">reception@moutainhouse.com</a></p>
-        <form action="#" onsubmit="return false">
+        <form action="#" onsubmit="return false" method="post">
             <p>
                 <input type="text" name="full_name" placeholder="Full Name">
             </p>
