--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 						<li><a href="#">Room 3</a></li>
 					</ul>
 				</li>
-				<li class="nav-menu-item"><a href="#">Booking</a></li>
+				<li class="nav-menu-item"><a href="?page=booking">Booking</a></li>
 				<li class="nav-menu-item"><a href="?page=gallery">Gallery</a></li>
-				<li class="nav-menu-item"><a href="#">Contacts</a></li>
+				<li class="nav-menu-item"><a href="?page=contacts">Contacts</a></li>
 			</ul>
 		</nav>
 	</div>
