--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<li><a href="?page=wine_tasting">Wine Tasting</a></li>
 					</ul>
 				</li>
-				<li class="nav-menu-item"><a href="#">Rooms</a>
+				<li class="nav-menu-item"><a href="?page=rooms">Rooms</a>
 					<ul class="submenu">
 						<li><a href="#">Room 1</a></li>
 						<li><a href="#">Room 2</a></li>
