--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				</li>
 				<li class="nav-menu-item"><a href="?page=rooms">Rooms</a>
 					<ul class="submenu">
-						<li><a href="#">Room 1</a></li>
-						<li><a href="#">Room 2</a></li>
-						<li><a href="#">Room 3</a></li>
+						<li><a href="?page=room1">Room 1</a></li>
+						<li><a href="?page=room2">Room 2</a></li>
+						<li><a href="?page=room3">Room 3</a></li>
 					</ul>
 				</li>
 				<li class="nav-menu-item"><a href="?page=booking">Booking</a></li>
