--- a/main.html
+++ b/main.html
@@ -121,7 +121,7 @@
         </ul>
         <p class="rooms-prices"><b>Prices start at:</b> $110 per night</p>
         <div class="rooms-button">
-            <a href="#" class="button">More</a>
+            <a href="?page=rooms" class="button">More</a>
         </div>
     </div>
     <div class="room">
