--- a/booking.html
+++ b/booking.html
@@ -18,7 +18,7 @@
             <input type="number" name="children" min="0" max="2" value="0">
         </div>
         <div class="booking-input">
-            <button type="select" class="button form-btn" onclick="displayAvRooms()">Search</button>
+            <button type="submit" class="button form-btn" onclick="displayAvRooms()">Search</button>
         </div>
     </form>
 </section>
