--- a/mountain_snowmobile_tour.html
+++ b/mountain_snowmobile_tour.html
@@ -21,7 +21,7 @@
 			<input type="number" name="adults" min="1" max="2" value="1"><br>
 			CHILDREN<br>
 			<input type="number" name="children" min="0" max="2" value="0"><br>
-			<input type="submit" class="button" value="Search" onclick="displayAvRooms()">
+			<input type="submit" class="button" value="Search" onclick="findRooms()">
 		</form>
 	</aside>
 </div>
