--- a/rooms.html
+++ b/rooms.html
@@ -6,6 +6,7 @@
 				Sort<br>
 				<input type="radio" name="sort" value="lowToHigh"> Price Low to High<br>
 				<input type="radio" name="sort" value="highToLow"> Price High to Low<br>
+				<input type="radio" name="sort" value="none" checked> Do not sort<br>
 			</div>
 			<div id="filter">
 				Filter<br>
