--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 </header>
 <main id="content"></main>
 <footer>
-	<form action="#" onsubmit="return false">
+	<form action="index.html">
+		<input type="hidden" name="page" value="search">
 		<input type="text" name="search" id="search">
-		<button type="select" class="button form-btn" onclick="searchTextOnPage('search')">Search</button>
+		<button type="select" class="button form-btn">Search</button>
 	</form>
 	<div class="footer">
 		<h1><a href="index.html" class="site-name">MountainHouse&nbsp;&nbsp;&nbsp;&nbsp;</a></h1>
@@ -51,6 +52,5 @@
 </footer>
 <script src='js/jquery-3.4.1.js'></script>
 <script src="js/main.js"></script>
-<script src="js/get.js"></script>
 </body>
 </html>
