--- a/about_us.html
+++ b/about_us.html
@@ -8,7 +8,7 @@
 			<h3 class="section-heading">We Offer</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi nisl, blandit a porttitor eu, condimentum eu lacus. Donec tristique velit sit amet massa sagittis malesuada. Vestibulum ac dui placerat, dignissim purus ac, dictum tortor. Sed porta dolor sit amet varius condimentum. Mauris sollicitudin convallis pharetra. Donec odio nulla, porttitor et semper a, facilisis et dolor. Quisque vel consectetur ligula. Cras convallis hendrerit neque, et aliquet nisl malesuada non. Curabitur elementum posuere ex, quis faucibus nibh eleifend a. Duis arcu dui, tempus in magna blandit, maximus pretium diam. Nulla iaculis dolor ut hendrerit bibendum.</p>
 		</article>
-		<div class="container">
+		<div class="container" id="facilities">
 			<div class="facilities">
 				<p class="facilities-icon"><i class="fas fa-bed"></i></p>
 				<p>bedrooms: 16</p>
