--- a/main.html
+++ b/main.html
@@ -1,3 +1,9 @@
+<div id="first-small">
+    <div class="first-content">
+        <p>Lorem ipsum dolor sit amet</p>
+        <a class="button" href="?page=about_us">Learn more</a>
+    </div>
+</div>
 <div id="slider">
     <p>Lorem ipsum dolor sit amet</p>
     <a class="button" href="?page=about_us">Learn more</a>
@@ -64,7 +70,7 @@
         </div>
     </div>
 </section>
-<section class="odd-info container">
+<section class="odd-info container" id="odd-info">
     <div>
         <p class="number">5</p>
         <p>Years of Service</p>
