--- a/room2.html
+++ b/room2.html
@@ -1,5 +1,10 @@
 <div class="main">
 	<section>
+		<ul class="breadcrumb">
+			<li><a href="?page=main">Home</a></li>
+			<li><a href="?page=rooms">Rooms</a></li>
+			<li>Room 2</li>
+		</ul>
 		<div class="activities-item">
             <div class="activities-img">
                 <img src="img/room2.jpg" class="act-img">
