--- a/search.html
+++ b/search.html
@@ -1,5 +1,6 @@
 <div class="main">
-	<section id="search-results"></section>
+	<section id="search-results">
+	</section>
 	<aside class="sidebar">
 		<form action="#" onsubmit="return false">
 			CHECK-IN<br>
