--- a/snowboard_ski_lessons.html
+++ b/snowboard_ski_lessons.html
@@ -1,5 +1,10 @@
 <div class="main">
 	<section>
+		<ul class="breadcrumb">
+			<li><a href="?page=main">Home</a></li>
+			<li><a href="?page=activities">Activities</a></li>
+			<li>Snowboard & Ski Lessons</li>
+		</ul>
 		<div class="activities-item">
             <div class="activities-img">
                 <img src="img/4.jpg" class="act-img">
