--- a/mountain_snowmobile_tour.html
+++ b/mountain_snowmobile_tour.html
@@ -1,5 +1,10 @@
 <div class="main">
 	<section>
+		<ul class="breadcrumb">
+			<li><a href="?page=main">Home</a></li>
+			<li><a href="?page=activities">Activities</a></li>
+			<li>Mountain Snowmobile Tour</li>
+		</ul>
 		<div class="activities-item">
             <div class="activities-img">
                 <img src="img/3.jpg" class="act-img">
