--- a/wine_tasting.html
+++ b/wine_tasting.html
@@ -1,5 +1,10 @@
 <div class="main">
 	<section>
+		<ul class="breadcrumb">
+			<li><a href="?page=main">Home</a></li>
+			<li><a href="?page=activities">Activities</a></li>
+			<li>Wine Tasting</li>
+		</ul>
 		<div class="activities-item">
             <div class="activities-img">
                 <img src="img/2.jpg" class="act-img">
