--- a/booking.html
+++ b/booking.html
@@ -1,4 +1,4 @@
-<section class="book">
+<section class="book" id="booking-page">
 	<h2>Book Your Stay</h2>
     <form action="#" class="booking-form" onsubmit="return false">
         <div class="booking-input">
