--- a/main.html
+++ b/main.html
@@ -150,7 +150,7 @@
         <p class="rooms-prices"><b>Prices start at:</b> $440 per night</p>
     </div>
 </section>
-<section class="booking odd-info">
+<section class="booking odd-info" id="booking-main">
     <h2>Book Your Stay</h2>
     <form action="#" class="booking-form" onsubmit="return false">
         <div class="booking-input">
@@ -170,7 +170,7 @@
             <input type="number" name="children">
         </div>
         <div class="booking-input">
-            <button type="select" class="button form-btn">Search</button>
+            <button type="select" class="button form-btn" onclick="findRooms()">Search</button>
         </div>
     </form>
 </section>
