--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>MountainHouse</title>
@@ -52,7 +53,7 @@
 		<p><a href="#" class="i"><i class="fab fa-facebook-square"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="i"><i class="fab fa-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="i"><i class="fab fa-twitter"></i></a></p>
 	</div>
 </footer>
-<script src='js/jquery-3.4.1.js'></script>
-<script src="js/main.js"></script>
+<script src='js/jquery-3.4.1.js' type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
